<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/update_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/user_profile"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="40sp"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/update_first_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/icons_contacts_30_background"
            android:gravity="center_vertical"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColor="@color/background"
            android:textColorHint="@color/background"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/background" />

        <EditText
            android:id="@+id/update_last_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/icons_contacts_30_background"
            android:gravity="center_vertical"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/background"
            android:textColorHint="@color/background"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/background" />

        <EditText
            android:id="@+id/update_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/icons_email_30_background"
            android:gravity="center_vertical"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/background"
            android:textColorHint="@color/background"
            android:textSize="16sp" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_selector"
            android:padding="3dp"
            android:text="@string/update_user"
            android:textColor="@color/background"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/update_disconnect_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_selector"
            android:backgroundTint="@color/red"
            android:padding="3dp"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>