<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/update_delete_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/icons_label_30"
            android:gravity="center_vertical"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/update_delete_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/icons_info_30"
            android:gravity="center_vertical"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:cursorVisible="false"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icons_edit_50"
                android:contentDescription="@string/update_news"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="35dp" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icons_delete_50"
                android:contentDescription="@string/delete_news"
                android:layout_marginEnd="35dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Comments"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dialog_rview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>